--- a/src/styles.css
+++ b/src/styles.css
@@ -41,14 +41,15 @@
   }
   
   button {
-    margin: 0 30px;
+    margin: 0 30px ;
     border-radius: 8px;
     border: 1px solid transparent;
     padding: 0.6em 1.2em;
     font-size: 1em;
     font-weight: 500;
     font-family: inherit;
-    background-color: #1a1a1a;
+    background-color: #000000;
+    color: #f9f9f9;
     cursor: pointer;
     transition: border-color 0.25s;
   }
